k8s/mongo-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: worldapp-mongo
  namespace: worldapp-ns
spec:
  serviceName: "worldapp-mongo"
  replicas: 1
  selector:
    matchLabels:
      app: worldapp-mongo
  template:
    metadata:
      labels:
        app: worldapp-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
