k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: worldapp-backend
  namespace: worldapp-ns
spec:
  selector:
    app: worldapp-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
