k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: worldapp-mongo
  namespace: worldapp-ns
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    app: worldapp-mongo
