k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: worldapp-ns
spec:
  ingressClassName: nginx
  rules:
    - host: worldapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: worldapp-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: worldapp-backend
                port:
                  number: 5000
